--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="https://github.com/hash/TheSameGameAgain/raw/master/css/reset.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="https://github.com/hash/TheSameGameAgain/raw/master/css/master.css" />
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-	<script type="text/javascript" src="https://github.com/hash/TheSameGameAgain/raw/master/js/main.js"></script>
+	<script type="text/javascript">
+	//<![CDATA[
+	$.getScript("https://github.com/hash/TheSameGameAgain/raw/master/js/main.js");
+	//]]>
+	</script>
 </head>
 <body></body>
 </html>
